# DeckDrop

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOWNLOAD_PLAN.md  LICENSE  README.md  SYNC.md  build-appimage.sh  build-flatpak.sh  flatpak-builder.yaml  flatpak.metainfo.xml  package.json  vite.config.js
.github/workflows/: build.yml  test.yml
assets/: deckdrop.desktop
deckdrop-core/: Cargo.toml
deckdrop-core/src/: config.rs  game.rs  gamechecker.rs  lib.rs  light_manifest_test.rs  manifest_db.rs  network_cache.rs  synch.rs
deckdrop-gtk/: Cargo.toml
deckdrop-gtk/src/: config.rs  game.rs  gamechecker.rs  main.rs  settings.rs  synch.rs
deckdrop-network/: Cargo.toml
deckdrop-network/src/network/: channel.rs  debug_chunk_flow_test.rs  discovery.rs  download_test.rs  games.rs  large_chunk_test.rs  mod.rs  peer.rs  robust_download_test.rs  simple_chunk_test.rs
deckdrop-ui/: Cargo.toml
deckdrop-ui/src/: app.rs  file_tree.rs  main.rs  network_bridge.rs  window_control.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  network.rs
src-tauri/src/network/: channel.rs  discovery.rs  peer.rs
src/components/: NetworkDiscovery.svelte  WelcomeSetup.svelte
src/routes/: +page.svelte
