[package]
name = "deckdrop-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
deckdrop-network = { path = "../deckdrop-network" }
gtk4 = { version = "0.9", package = "gtk4" }
glib = { version = "0.20", package = "glib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
libp2p = { version = "0.54", features = ["identify"] }
blake3 = "1.5"
hex = "0.4"
async-trait = "0.1"
tempfile = "3"
