[package]
name = "deckdrop-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
libp2p = { version = "0.54", features = ["mdns", "tcp", "noise", "yamux", "macros", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"