[package]
name = "deckdrop-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
libp2p = { version = "0.54", features = ["mdns", "tcp", "noise", "yamux", "macros", "tokio", "identify", "request-response"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
async-trait = "0.1"